# tams_camera_config

./: CMakeLists.txt  README.md  package.xml
kinect2/no_1/011837152047/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2/no_4/004808165247/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
kinect2/no_5/010271363647/: calib_color.yaml  calib_depth.yaml  calib_ir.yaml  calib_pose.yaml
launch/: MicrosoftLifeCam_HD-3000_1280x720_1.launch
mechmind_camera/: camera_info.yaml
udev_rules/: 99-uvc.rules
usb_cameras/: MicrosoftLifeCam_HD-3000_1280x720_1.yaml
