<?xml version="1.0"?>
<package format="2">
  <name>tams_camera_config</name>
  <version>0.0.0</version>
  <description>This package holds calibration files for visual sensors at the TAMS Group</description>

  <maintainer email="einig@informatik.uni-hamburg.de">Lasse Einig</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>
